--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.resources.static-locations=file:public
 
 # H2 Database configuration
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:file:~/testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
@@ -10,7 +10,7 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.ddl-auto=update
-
+server.port=5000
 # Incase you are using MYSQL Database please comment/remove h2 database configuration above
 # And uncomment below configuration
 #spring.jpa.hibernate.ddl-auto=update
